app/assets/stylesheets/main/landing.scss
// BigBlueButton open source conferencing system - http://www.bigbluebutton.org/.
//
// Copyright (c) 2016 BigBlueButton Inc. and by respective authors (see below).
//
// This program is free software; you can redistribute it and/or modify it under the
// terms of the GNU Lesser General Public License as published by the Free Software
// Foundation; either version 3.0 of the License, or (at your option) any later
// version.
//
// BigBlueButton is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
// PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License along
// with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.

.meeting-url-button-group {
  padding-top: 5px;
  width: 150px;
  text-align: center;
}

.meeting-url-qrcode-group {
  padding-top: 5px;
  width: 128px;
  height: 128px;
  text-align: center;
}

.previously-joined, .actives {
  list-style-type: none;
  margin:auto;
  width: 200px;
  padding: 0;
  cursor: pointer;
}

.meetings {

}

.rooms {

  .table-wrapper {
    padding: 40px 50px 10px 50px;

    #recordings {
      thead {
        th:after {
          content: none; //removes the sort icon in table header
        }
      }
      .dataTables_empty {
        text-align: center;
      }
      .timeago {
        margin-left: 5px;
        font-size: 13px;
        cursor: pointer;
        color: #999;
      }
    }
  }
}

.img-thumbnail{
  padding: 4px;
  background-color: white;
  border: 1px solid #dddddd;
  border-radius: 4px;

  &.large{
    display: none;
  }

  &:hover + &.large{
    display: inline-block;
    position: absolute;
    z-index: 1;
  }
}

.meeting-url-group {
  position: relative;
}

.recording-update-trigger {
  &.recording-unpublished {
    color: red;
  }

  &.recording-unlisted {
    color: #e3a91e;
  }

  &.recording-published {
    color: green;
  }
}

.fa-spinner {
  width: 100%;
  text-align: center;
}

.disabled-button {
    opacity: 0.5;
}

.youtube-red {
  color: red;
}

.cloud-blue {
  color: cornflowerblue;
}

.green-check {
  color: limegreen;
}

.top-buffer {
  margin-top: 8px;
}

.tooltip-wrapper {
  display: inline-block;
}

 #youtube-footer{
   font-size: 10px;
   text-align: center;
   margin-top: 10px;
 }

